src/objects/datapro__Privacy_Detail_Lead__c.object
<CustomObject>
    <fields>
        <fullName>datapro__Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>datapro__Category__c</fullName>
        <label>Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Channel__c</fullName>
        <label>Channel</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Count_of_Privacy_Lead__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Privacy Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datapro__Created_Date_Field__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datapro__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__Last_Modified_Date_Field__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datapro__Last_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH(TODAY()) == 1, IF(MONTH( datapro__End_Date__c) == 12,&apos;Last Month&apos;,&apos;All&apos;),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()) -1,&apos;Last Month&apos;,&apos;All&apos;)),IF(MONTH(TODAY()) == 1, IF(MONTH( datapro__Withdrawn_date__c) == 12,&apos;Last Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()) -1,&apos;Last Month&apos;,&apos;All&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Lawful_Basis__c</fullName>
        <label>Lawful Basis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Privacy Detail Leads</relationshipLabel>
        <relationshipName>Privacy_Detail_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>datapro__Name_Field__c</fullName>
        <formula>datapro__Lead__r.FirstName +&apos; &apos;+  datapro__Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Next_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH(TODAY()) == 12, IF(MONTH( datapro__End_Date__c) == 1,&apos;Next Month&apos;,&apos;All&apos;),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()) +1,&apos;Next Month&apos;,&apos;All&apos;)),IF(MONTH(TODAY()) == 12, IF(MONTH( datapro__Withdrawn_date__c) == 1,&apos;Next Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()) +1,&apos;Next Month&apos;,&apos;All&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Preference_Center_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preference Center Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datapro__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__This_Month__c</fullName>
        <formula>IF(ISNULL( datapro__Withdrawn_date__c ),IF(MONTH( datapro__End_Date__c ) == MONTH(TODAY()),&apos;This Month&apos;,&apos;All&apos;),IF(MONTH( datapro__Withdrawn_date__c ) == MONTH(TODAY()),&apos;This Month&apos;,&apos;All&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datapro__Withdrawn_date__c</fullName>
        <label>Withdrawn date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datapro__hasFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Privacy Detail Lead</label>
    <listViews>
        <fullName>datapro__All</fullName>
        <columns>NAME</columns>
        <columns>datapro__Lead__c</columns>
        <columns>datapro__Category__c</columns>
        <columns>datapro__Lawful_Basis__c</columns>
        <columns>datapro__Channel__c</columns>
        <columns>datapro__Start_Date__c</columns>
        <columns>datapro__End_Date__c</columns>
        <columns>datapro__Additional_Info__c</columns>
        <columns>datapro__hasFlag__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PDL-{0000}</displayFormat>
        <label>Privacy Detail Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Detail Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>